--- a/redmine_dmsf/config/locales/es.yml
+++ b/redmine_dmsf/config/locales/es.yml
@@ -1,5 +1,4 @@
-# English strings go here for Rails i18n
-en:
+es:
   :dmsf: "DMSF"
   :label_dmsf_file_plural: "Dmsf files"
   :warning_no_entries_selected: "No entries selected"
@@ -13,4 +12,28 @@ en:
   :question_do_you_really_want_to_delete_this_entry: "Do you really want to delete this entry?"
   :error_max_files_exceeded: "Limit for number of simultaneously downloadable files exceeded: "
   :question_do_you_really_want_to_delete_this_revision: "Do you really want to delete this revision?"
+  :error_entry_project_does_not_match_current_project: "Entry project doesn't match current project"
+  :notice_folder_created: "Folder created"
+  :error_folder_creation_failed: "Folder creation failed"
+  :error_folder_title_must_be_entered: "Title must be entered"
+  :notice_folder_deleted: "Folder deleted"
+  :error_folder_is_not_empty: "Folder is not empty"
+  :error_folder_title_is_already_used: "Title is already used"
+  :notice_folder_details_were_saved: "Folder details were saved"
+  :error_file_is_locked: "File is locked"
+  :notice_file_deleted: "File deleted"
+  :error_at_least_one_revision_must_be_present: "At least one revision must be present"
+  :notice_revision_deleted: "Revision deleted"
+  :warning_one_of_files_locked: "One of files locked"
+  :notice_file_unlocked: "File unlocked"
+  :notice_file_revision_created: "File revision created"
+  :notice_your_preferences_were_saved: "Your preferences were saved"
+  :warning_folder_notifications_already_activated: "Folder notifications already activated"
+  :notice_folder_notifications_activated: "Folder notifications activated"
+  :warning_folder_notifications_already_deactivated: "Folder notifications already deactivated"
+  :notice_folder_notifications_deactivated: "Folder notifications deactivated"
+  :warning_file_notifications_already_activated: "File notifications already activated"
+  :notice_file_notifications_activated: "File notifications activated"
+  :warning_file_notifications_already_deactivated: "File notifications already deactivated"
+  :notice_file_notifications_deactivated: "File notifications deactivated"
   
