* activated Plupload's localization * started main listing view localization
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@30 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/fr.yml
+++ b/redmine_dmsf/config/locales/fr.yml
@@ -10,7 +10,7 @@ fr:
   :notice_file_unlocked: "File unlocked"
   :error_only_user_that_locked_file_can_unlock_it: "Only user that locked file can unlock it"
   :question_do_you_really_want_to_delete_this_entry: "Do you really want to delete this entry?"
-  :error_max_files_exceeded: "Limit for number of simultaneously downloadable files exceeded: "
+  :error_max_files_exceeded: "Limit for %{number} simultaneously downloaded files exceeded"
   :question_do_you_really_want_to_delete_this_revision: "Do you really want to delete this revision?"
   :error_entry_project_does_not_match_current_project: "Entry project doesn't match current project"
   :notice_folder_created: "Folder created"
@@ -36,4 +36,17 @@ fr:
   :notice_file_notifications_activated: "File notifications activated"
   :warning_file_notifications_already_deactivated: "File notifications already deactivated"
   :notice_file_notifications_deactivated: "File notifications deactivated"
+  :link_details: "Details"
+  :submit_create_folder: "Create folder"
+  :title_check_uncheck_all_for_zip_download_or_email: "Check/Uncheck all for zip download or email"
+  :link_title: "Title"
+  :link_size: "Size"
+  :link_modified: "Modified"
+  :link_ver: "Ver."
+  :link_author: "Author"
+  :title_check_for_zip_download_or_email: "Check for Zip download or email"
+  :title_delete: "Delete"
+  :title_notifications_active_deactivate: "Notifications active: Deactivate"
+  :title_notifications_not_active_activate: "Notifications not active: Activate"
+  :title_title_version_version_download: "%{title} version %{version} download"
   
