* separated plupload widget to partial view * further localization progress
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@32 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/de.yml
+++ b/redmine_dmsf/config/locales/de.yml
@@ -49,4 +49,14 @@ de:
   :title_notifications_active_deactivate: "Notifications active: Deactivate"
   :title_notifications_not_active_activate: "Notifications not active: Activate"
   :title_title_version_version_download: "%{title} version %{version} download"
+  :title_locked_by_user: "Locked by %{user}"
+  :title_locked_by_you: "Locked by you"
+  :title_waiting_for_approval: "Waiting for Approval"
+  :title_approved: "Approved"
+  :title_unlock_file: "Unlock to allow changes for other members"
+  :title_lock_file: "Lock to prevent changes for other members"
+  :submit_download: "Download"
+  :title_download_checked: "Download checked in Zip archive"
+  :submit_email: "Email"
+  :title_send_checked_by_email: "Send checked by email"
   
