--- a/redmine_dmsf/config/locales/ru.yml
+++ b/redmine_dmsf/config/locales/ru.yml
@@ -59,4 +59,5 @@ ru:
   :title_download_checked: "Download checked in Zip archive"
   :submit_email: "Email"
   :title_send_checked_by_email: "Send checked by email"
+  :link_user_preferences: "Your DMSF project preferences"
   
