* localized all dmsf controler views
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@36 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/cs.yml
+++ b/redmine_dmsf/config/locales/cs.yml
@@ -60,7 +60,6 @@ cs:
   :submit_email: "Email"
   :title_send_checked_by_email: "Send checked by email"
   :link_user_preferences: "Your DMSF project preferences"
-
   :heading_send_documents_by_email: "Send documents by email"
   :label_email_from: "From"
   :label_email_to: "To"
@@ -69,3 +68,11 @@ cs:
   :label_email_documents: "Documents"
   :label_email_body: "Body"
   :label_email_send: "Send"
+
+  :title_notifications_active: "Notifications active"
+  :label_file_size: "File size"
+  :heading_file_upload: "Upload"
+  :note_uploaded_maximum_files_at_once: "There can be uploaded maximum of %{number} files at once."
+  :note_upload_files_greater_than_two_gb: "To upload files greater than 2GB you must have 64b browser."
+  :submit_upload_files: "Upload"
+  
