--- a/redmine_dmsf/config/locales/ru.yml
+++ b/redmine_dmsf/config/locales/ru.yml
@@ -68,4 +68,10 @@ ru:
   :label_email_documents: "Documents"
   :label_email_body: "Body"
   :label_email_send: "Send"
+  :title_notifications_active: "Notifications active"
+  :label_file_size: "File size"
+  :heading_file_upload: "Upload"
+  :note_uploaded_maximum_files_at_once: "There can be uploaded maximum of %{number} files at once."
+  :note_upload_files_greater_than_two_gb: "To upload files greater than 2GB you must have 64b browser."
+  :submit_upload_files: "Upload"
   
