* reworked folder manipulation
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@38 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/en.yml
+++ b/redmine_dmsf/config/locales/en.yml
@@ -37,7 +37,9 @@ en:
   :warning_file_notifications_already_deactivated: "File notifications already deactivated"
   :notice_file_notifications_deactivated: "File notifications deactivated"
   :link_details: "%{title} details"
-  :submit_create_folder: "Create folder"
+  :link_edit: "Edit %{title}"
+  :submit_create: "Create"
+  :link_create_folder: "Create folder"
   :title_check_uncheck_all_for_zip_download_or_email: "Check/Uncheck all for zip download or email"
   :link_title: "Title"
   :link_size: "Size"
