--- a/redmine_dmsf/config/locales/en.yml
+++ b/redmine_dmsf/config/locales/en.yml
@@ -76,5 +76,9 @@ en:
   :note_uploaded_maximum_files_at_once: "There can be uploaded maximum of %{number} files at once."
   :note_upload_files_greater_than_two_gb: "To upload files greater than 2GB you must have 64b browser."
   :submit_upload_files: "Upload"
+  :heading_new_folder: "New Folder"
+  :label_title: "Title"
+  :label_description: "Description"
+  :submit_save: "Save"
   
   
