* localized file details
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@45 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/fr.yml
+++ b/redmine_dmsf/config/locales/fr.yml
@@ -82,4 +82,24 @@ fr:
   :select_option_deactivated: "Deactivated"
   :select_option_activated: "Activated"
   :title_save_preferences: "Save preferences"
+  :heading_revisions: "Revisions"
+  :title_download: "Download"
+  :title_delete_revision: "Delete revision"
+  :label_created: "Created"
+  :label_changed: "Changed"
+  :info_changed_by_user: "%{changed} by %{user}"
+  :label_filename: "Filename"
+  :label_version: "Version"
+  :label_workflow: "Workflow"
+  :option_workflow_waiting_for_approval: "Waiting for approval"
+  :option_workflow_approved: "Approved"
+  :option_workflow_none: "None"
+  :label_mime: "Mime"
+  :label_size: "Size"
+  :label_comment: "Comment"
+  :heading_new_revision: "New Revision"
+  :option_version_same: "Same"
+  :option_version_minor: "Minor"
+  :option_version_major: "Major"
+  :label_new_content: "New content"
   
