--- a/redmine_dmsf/config/locales/es.yml
+++ b/redmine_dmsf/config/locales/es.yml
@@ -102,4 +102,22 @@ es:
   :option_version_minor: "Minor"
   :option_version_major: "Major"
   :label_new_content: "New content"
+  :label_maximum_files_upload: "Maximum files upload"
+  :note_maximum_number_of_files_uploaded: "Limits maximum number of files uploaded at once. 0 means unlimited."
+  :label_maximum_files_download: "Maximum files download"
+  :note_maximum_number_of_files_downloaded: "Limits maximum number of files downloaded in zip or sent via email. 0 means unlimited."
+  :label_file_storage_directory: "File storage directory"
+  :label_index_database: "Index database"
+  :label_stemming_language: "Stemming Language"
+  :note_possible_values: "Possible values"
+  :note_pass_none_to_disable_stemming: "pass 'none' to disable stemming"
+  :label_stem_strategy: "Stem strategy"
+  :option_stem_none: "Stem none (default)"
+  :option_stem_some: "Stem some"
+  :option_stem_all: "Stem all"
+  :label_stemming_description: "This controls how the query parser will apply the stemming algorithm. The default value is STEM_NONE. The possible values are"
+  :note_do_not_stem: "Don't perform any stemming."
+  :note_stem_some: "Search for stemmed forms of terms except for those which start with a capital letter, or are followed by certain characters, or are used with operators which need positional information. Stemmed terms are prefixed with 'Z'."
+  :note_stem_all: "Search for stemmed forms of all words (note: no 'Z' prefix is added)."
+  :note_stemming_applied: "Note that the stemming algorithm is only applied to words in probabilistic fields - boolean filter terms are never stemmed."
   
