--- a/redmine_dmsf/config/locales/en.yml
+++ b/redmine_dmsf/config/locales/en.yml
@@ -106,7 +106,6 @@ en:
   :option_version_minor: "Minor"
   :option_version_major: "Major"
   :label_new_content: "New content"
-  
   :label_maximum_files_upload: "Maximum files upload"
   :note_maximum_number_of_files_uploaded: "Limits maximum number of files uploaded at once. 0 means unlimited."
   :label_maximum_files_download: "Maximum files download"
@@ -125,4 +124,6 @@ en:
   :note_stem_some: "Search for stemmed forms of terms except for those which start with a capital letter, or are followed by certain characters, or are used with operators which need positional information. Stemmed terms are prefixed with 'Z'."
   :note_stem_all: "Search for stemmed forms of all words (note: no 'Z' prefix is added)."
   :note_stemming_applied: "Note that the stemming algorithm is only applied to words in probabilistic fields - boolean filter terms are never stemmed."
+  
+  :label_default_notifications: "File default notifications"
   
