--- a/redmine_dmsf/config/locales/es.yml
+++ b/redmine_dmsf/config/locales/es.yml
@@ -1,41 +1,43 @@
 es:
   :dmsf: "DMSF"
-  :label_dmsf_file_plural: "Dmsf files"
-  :warning_no_entries_selected: "No entries selected"
-  :error_email_to_must_be_entered: "Email To must be entered"
+  :label_dmsf_file_plural: "DMSF Archivos"
+  :warning_no_entries_selected: "No ha seleccionado ningún ítem"
+  :error_email_to_must_be_entered: "Ingrese un email"
   :notice_email_sent: "Email sent"
-  :warning_file_already_locked: "File already locked"
-  :notice_file_locked: "File locked"
-  :warning_file_not_locked: "File not locked"
-  :notice_file_unlocked: "File unlocked"
-  :error_only_user_that_locked_file_can_unlock_it: "Only user that locked file can unlock it"
-  :question_do_you_really_want_to_delete_this_entry: "Do you really want to delete this entry?"
-  :error_max_files_exceeded: "Limit for %{number} simultaneously downloaded files exceeded"
-  :question_do_you_really_want_to_delete_this_revision: "Do you really want to delete this revision?"
-  :error_entry_project_does_not_match_current_project: "Entry project doesn't match current project"
-  :notice_folder_created: "Folder created"
-  :error_folder_creation_failed: "Folder creation failed"
-  :error_folder_title_must_be_entered: "Title must be entered"
-  :notice_folder_deleted: "Folder deleted"
-  :error_folder_is_not_empty: "Folder is not empty"
-  :error_folder_title_is_already_used: "Title is already used"
-  :notice_folder_details_were_saved: "Folder details were saved"
-  :error_file_is_locked: "File is locked"
-  :notice_file_deleted: "File deleted"
-  :error_at_least_one_revision_must_be_present: "At least one revision must be present"
-  :notice_revision_deleted: "Revision deleted"
-  :warning_one_of_files_locked: "One of files locked"
-  :notice_file_unlocked: "File unlocked"
-  :notice_file_revision_created: "File revision created"
-  :notice_your_preferences_were_saved: "Your preferences were saved"
-  :warning_folder_notifications_already_activated: "Folder notifications already activated"
-  :notice_folder_notifications_activated: "Folder notifications activated"
-  :warning_folder_notifications_already_deactivated: "Folder notifications already deactivated"
-  :notice_folder_notifications_deactivated: "Folder notifications deactivated"
-  :warning_file_notifications_already_activated: "File notifications already activated"
-  :notice_file_notifications_activated: "File notifications activated"
-  :warning_file_notifications_already_deactivated: "File notifications already deactivated"
-  :notice_file_notifications_deactivated: "File notifications deactivated"
+  :warning_file_already_locked: "El archivo ya está bloqueado"
+  :notice_file_locked: "Archivo bloqueado"
+  :warning_file_not_locked: "Archivo no bloqueado"
+  :notice_file_unlocked: "Archivo desbloqueado"
+  :error_only_user_that_locked_file_can_unlock_it: "Solo los usuarios que bloquearon previamente al archivo lo pueden desbloquear"
+  :question_do_you_really_want_to_delete_this_entry: "¿Está seguro de borrar el ítem seleccionado?"
+  :error_max_files_exceeded: "Se excedio el numero permitido de archivos bajados de manera simultánea: "
+  :question_do_you_really_want_to_delete_this_revision: "¿Está seguro de borrar la revision seleccionada?"
+  :error_entry_project_does_not_match_current_project: "Las entradas del proyecto no concuerdan con el proyecto seleccionado"
+  :notice_folder_created: "Carpeta creada satisfactoriamente"
+  :error_folder_creation_failed: "La creacion de la carpeta ha fallado"
+  :error_folder_title_must_be_entered: "Debe ingresar un título"
+  :notice_folder_deleted: "Carpeta borrada"
+  :error_folder_is_not_empty: "La carpeta no está vacía"
+  :error_folder_title_is_already_used: "El título ingresado ya está siendo usado por otro documento"
+  :notice_folder_details_were_saved: "Los detalles de la carpeta fueron grabados correctamente"
+  :error_file_is_locked: "Archivo bloqueado"
+  :notice_file_deleted: "Archivo borrado"
+  :error_at_least_one_revision_must_be_present: "al menos una revisión debe estar presente"
+  :notice_revision_deleted: "Revision eliminada correctamente "
+  :warning_one_of_files_locked: "Uno de los archivos está bloqueado"
+  :notice_file_unlocked: "Archivo desbloqueado"
+  :notice_file_revision_created: "Revision de archivos creada correctamente"
+  :notice_your_preferences_were_saved: "Sus preferencias han sido guardadas correctamente"
+  :warning_folder_notifications_already_activated: "Las notificaciones de la carpeta seleccionada ya están activadas previamente"
+  :notice_folder_notifications_activated: "Notificaciones de carpeta activadas"
+  :warning_folder_notifications_already_deactivated: "Las notificaciones de la carpeta seleccionada ya están desactivadas previamente"
+  :notice_folder_notifications_deactivated: "Notificaciones de carpeta desactivadas"
+  :warning_file_notifications_already_activated: "Las notificaciones del archivo seleccionado ya estaban activadas previamente"
+  :notice_file_notifications_activated: "Notificación de archivo activado"
+  :warning_file_notifications_already_deactivated: "Las notificaciones del archivo seleccionado ya estaban desactivadas previamente""
+  :notice_file_notifications_deactivated: "Notificación de archivo desactivada"
+  
+ # Not translated
   :link_details: "%{title} details"
   :link_edit: "Edit %{title}"
   :submit_create: "Create"
@@ -120,4 +122,5 @@ es:
   :note_stem_some: "Search for stemmed forms of terms except for those which start with a capital letter, or are followed by certain characters, or are used with operators which need positional information. Stemmed terms are prefixed with 'Z'."
   :note_stem_all: "Search for stemmed forms of all words (note: no 'Z' prefix is added)."
   :note_stemming_applied: "Note that the stemming algorithm is only applied to words in probabilistic fields - boolean filter terms are never stemmed."
+  :label_default_notifications: "File default notifications"
   
