--- a/redmine_dmsf/config/locales/ja.yml
+++ b/redmine_dmsf/config/locales/ja.yml
@@ -125,4 +125,6 @@ en:
   :note_stem_all: "Search for stemmed forms of all words (note: no 'Z' prefix is added)."
   :note_stemming_applied: "Note that the stemming algorithm is only applied to words in probabilistic fields - boolean filter terms are never stemmed."
   :label_default_notifications: "File default notifications"
+  :heading_uploaded_files: "Uploaded Files"
+  :submit_commit: "Commit"
   
