--- a/redmine_dmsf/config/locales/cs.yml
+++ b/redmine_dmsf/config/locales/cs.yml
@@ -86,7 +86,6 @@ cs:
   :select_option_deactivated: "Deactivated"
   :select_option_activated: "Activated"
   :title_save_preferences: "Save preferences"
-
   :heading_revisions: "Revisions"
   :title_download: "Download"
   :title_delete_revision: "Delete revision"
@@ -128,4 +127,12 @@ cs:
   :label_default_notifications: "File default notifications"
   :heading_uploaded_files: "Uploaded Files"
   :submit_commit: "Commit"
+  :link_documents: "Documents"
+  :permission_browse_documents: "Browse documents"
+  :permission_user_preferences: "User preferences"
+  :permission_view_dmsf_files: "View documents"
+  :permission_folder_manipulation: "Folder manipulation"
+  :permission_file_manipulation: "File manipulation"
+  :permission_file_approval: "File approval"
+  :permission_force_file_unlock: "Force file unlock"
   
