* finished Issue 4: Document files renaming * finished Issue 36: Document/Folder move
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@65 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/cs.yml
+++ b/redmine_dmsf/config/locales/cs.yml
@@ -135,4 +135,6 @@ cs:
   :permission_file_manipulation: "File manipulation"
   :permission_file_approval: "File approval"
   :permission_force_file_unlock: "Force file unlock"
+  :label_file: "File"
+  :label_folder: "Folder"
   
