--- a/redmine_dmsf/config/locales/en-GB.yml
+++ b/redmine_dmsf/config/locales/en-GB.yml
@@ -131,4 +131,6 @@ en-GB:
   :permission_file_manipulation: "File manipulation"
   :permission_file_approval: "File approval"
   :permission_force_file_unlock: "Force file unlock"
+  :label_file: "File"
+  :label_folder: "Folder"
   
