--- a/redmine_dmsf/config/locales/en.yml
+++ b/redmine_dmsf/config/locales/en.yml
@@ -127,7 +127,6 @@ en:
   :label_default_notifications: "File default notifications"
   :heading_uploaded_files: "Uploaded Files"
   :submit_commit: "Commit"
-  
   :link_documents: "Documents"
   :permission_browse_documents: "Browse documents"
   :permission_user_preferences: "User preferences"
@@ -136,4 +135,6 @@ en:
   :permission_file_manipulation: "File manipulation"
   :permission_file_approval: "File approval"
   :permission_force_file_unlock: "Force file unlock"
+  :label_file: "File"
+  :label_folder: "Folder"
   
