--- a/redmine_dmsf/config/locales/es.yml
+++ b/redmine_dmsf/config/locales/es.yml
@@ -133,4 +133,6 @@ es:
   :permission_file_manipulation: "File manipulation"
   :permission_file_approval: "File approval"
   :permission_force_file_unlock: "Force file unlock"
+  :label_file: "File"
+  :label_folder: "Folder"
   
