--- a/redmine_dmsf/config/locales/en.yml
+++ b/redmine_dmsf/config/locales/en.yml
@@ -136,5 +136,6 @@ en:
   :permission_file_approval: "File approval"
   :permission_force_file_unlock: "Force file unlock"
   :label_file: "File"
-  :label_folder: "Folder"
+  :field_folder: "Folder"
+  :error_create_cycle_in_folder_dependency: "create cycle in folder dependency"
   
