* cleanup in db migration * cleanup in translations
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@68 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/es.yml
+++ b/redmine_dmsf/config/locales/es.yml
@@ -136,4 +136,5 @@ es:
   :label_file: "File"
   :field_folder: "Folder"
   :error_create_cycle_in_folder_dependency: "create cycle in folder dependency"
+  :error_contains_invalid_character: "contains invalid character(s)"
   
