--- a/redmine_dmsf/config/locales/de.yml
+++ b/redmine_dmsf/config/locales/de.yml
@@ -134,4 +134,5 @@ de:
   :label_file: "File"
   :field_folder: "Folder"
   :error_create_cycle_in_folder_dependency: "create cycle in folder dependency"
+  :error_contains_invalid_character: "contains invalid character(s)"
   
