--- a/redmine_dmsf/config/locales/ru.yml
+++ b/redmine_dmsf/config/locales/ru.yml
@@ -134,4 +134,5 @@ ru:
   :label_file: "File"
   :field_folder: "Folder"
   :error_create_cycle_in_folder_dependency: "create cycle in folder dependency"
+  :error_contains_invalid_character: "contains invalid character(s)"
   
