* reworked file upload and file revision creating
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@71 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/en.yml
+++ b/redmine_dmsf/config/locales/en.yml
@@ -139,4 +139,5 @@ en:
   :field_folder: "Folder"
   :error_create_cycle_in_folder_dependency: "create cycle in folder dependency"
   :error_contains_invalid_character: "contains invalid character(s)"
+  :error_file_commit_require_uploaded_file: "File commit require uploaded file"
   
