--- a/redmine_dmsf/config/locales/fr.yml
+++ b/redmine_dmsf/config/locales/fr.yml
@@ -136,4 +136,5 @@ fr:
   :error_create_cycle_in_folder_dependency: "create cycle in folder dependency"
   :error_contains_invalid_character: "contains invalid character(s)"
   :error_file_commit_require_uploaded_file: "File commit require uploaded file"
+  :warning_some_files_were_not_commited: "Some files were not commited due to validation errors: %{files}"
   
