--- a/redmine_dmsf/config/locales/en.yml
+++ b/redmine_dmsf/config/locales/en.yml
@@ -148,3 +148,8 @@ en:
   :question_do_you_really_want_to_delete_entries: "Do you really want to delete checked entries?"
   :title_delete_checked: "Delete checked"
   
+  :title_number_of_files_in_directory: "Number of files in directory"
+  :title_filename_for_download: "Filename used for download or in Zip archive"
+  :label_number_of_folders: "Folders"
+  :label_number_of_files: "Files"
+  
