--- a/redmine_dmsf/config/locales/en-GB.yml
+++ b/redmine_dmsf/config/locales/en-GB.yml
@@ -146,5 +146,5 @@ en-GB:
   :title_number_of_files_in_directory: "Number of files in directory"
   :title_filename_for_download: "Filename used for download or in Zip archive"
   :label_number_of_folders: "Folders"
-  :label_number_of_files: "Files"
+  :label_number_of_documents: "Documents"
   
