* finished Issue 65: download via Zip with national alphabet in filename
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@119 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/en.yml
+++ b/redmine_dmsf/config/locales/en.yml
@@ -152,3 +152,6 @@ en:
   :label_number_of_folders: "Folders"
   :label_number_of_documents: "Documents"
   
+  :label_zip_names_encoding: "Zip names encoding"
+  :note_zip_names_encoding_iconv: "Iconv is used for charset conversion from utf-8 to target encoding"
+  
