--- a/redmine_dmsf/config/locales/de.yml
+++ b/redmine_dmsf/config/locales/de.yml
@@ -1,140 +1,146 @@
 de:
   :dmsf: "DMSF"
-  :label_dmsf_file_plural: "Dmsf files"
-  :warning_no_entries_selected: "No entries selected"
-  :error_email_to_must_be_entered: "Email To must be entered"
-  :notice_email_sent: "Email sent"
-  :warning_file_already_locked: "File already locked"
-  :notice_file_locked: "File locked"
-  :warning_file_not_locked: "File not locked"
-  :notice_file_unlocked: "File unlocked"
-  :error_only_user_that_locked_file_can_unlock_it: "Only user that locked file can unlock it"
-  :question_do_you_really_want_to_delete_this_entry: "Do you really want to delete this entry?"
-  :error_max_files_exceeded: "Limit for %{number} simultaneously downloaded files exceeded"
-  :question_do_you_really_want_to_delete_this_revision: "Do you really want to delete this revision?"
-  :error_entry_project_does_not_match_current_project: "Entry project doesn't match current project"
-  :notice_folder_created: "Folder created"
-  :error_folder_creation_failed: "Folder creation failed"
-  :error_folder_title_must_be_entered: "Title must be entered"
-  :notice_folder_deleted: "Folder deleted"
-  :error_folder_is_not_empty: "Folder is not empty"
-  :error_folder_title_is_already_used: "Title is already used"
-  :notice_folder_details_were_saved: "Folder details were saved"
-  :error_file_is_locked: "File is locked"
-  :notice_file_deleted: "File deleted"
-  :error_at_least_one_revision_must_be_present: "At least one revision must be present"
-  :notice_revision_deleted: "Revision deleted"
-  :warning_one_of_files_locked: "One of files locked"
-  :notice_file_unlocked: "File unlocked"
-  :notice_file_revision_created: "File revision created"
-  :notice_your_preferences_were_saved: "Your preferences were saved"
-  :warning_folder_notifications_already_activated: "Folder notifications already activated"
-  :notice_folder_notifications_activated: "Folder notifications activated"
-  :warning_folder_notifications_already_deactivated: "Folder notifications already deactivated"
-  :notice_folder_notifications_deactivated: "Folder notifications deactivated"
-  :warning_file_notifications_already_activated: "File notifications already activated"
-  :notice_file_notifications_activated: "File notifications activated"
-  :warning_file_notifications_already_deactivated: "File notifications already deactivated"
-  :notice_file_notifications_deactivated: "File notifications deactivated"
-  :link_details: "%{title} details"
-  :link_edit: "Edit %{title}"
-  :submit_create: "Create"
-  :link_create_folder: "Create folder"
-  :title_check_uncheck_all_for_zip_download_or_email: "Check/Uncheck all for zip download or email"
-  :link_title: "Title"
-  :link_size: "Size"
-  :link_modified: "Modified"
-  :link_ver: "Ver."
-  :link_author: "Author"
-  :title_check_for_zip_download_or_email: "Check for Zip download or email"
-  :title_delete: "Delete"
-  :title_notifications_active_deactivate: "Notifications active: Deactivate"
-  :title_notifications_not_active_activate: "Notifications not active: Activate"
-  :title_title_version_version_download: "%{title} version %{version} download"
-  :title_locked_by_user: "Locked by %{user}"
-  :title_locked_by_you: "Locked by you"
-  :title_waiting_for_approval: "Waiting for Approval"
-  :title_approved: "Approved"
-  :title_unlock_file: "Unlock to allow changes for other members"
-  :title_lock_file: "Lock to prevent changes for other members"
+  :label_dmsf_file_plural: "DMSF"
+  :warning_no_entries_selected: "Keine Einträge ausgewählt"
+  :error_email_to_must_be_entered: "Es muss ein Email-Empfänger angegeben werden."
+  :notice_email_sent: "Email gesendet"
+  :warning_file_already_locked: "Datei schon gesperrt"
+  :notice_file_locked: "Datei gesperrt"
+  :warning_file_not_locked: "Datei nicht gesperrt"
+  :notice_file_unlocked: "Dateisperre gelöst"
+  :error_only_user_that_locked_file_can_unlock_it: "Nur der Benutzer, der die Datei gesperrt hat, kann sie auch wieder freigeben"
+  :question_do_you_really_want_to_delete_this_entry: "Willst du diesen Eintrag wirklich löschen?"
+  :error_max_files_exceeded: "Grenze für %{number} gleichzeitig heruntergeladene Dateien überschritten"
+  :question_do_you_really_want_to_delete_this_revision: "Möchtest du diese Dateiversion wirklich löschen?"
+  :error_entry_project_does_not_match_current_project: "Entry Projekt entspricht nicht aktuellen Projekt"
+  :notice_folder_created: "Ordner erstellt"
+  :error_folder_creation_failed: "Ordnererstellung fehlgeschlagen"
+  :error_folder_title_must_be_entered: "Es muss ein Titel angegeben werden"
+  :notice_folder_deleted: "Ordner gelöscht"
+  :error_folder_is_not_empty: "Ordner ist nicht leer"
+  :error_folder_title_is_already_used: "Titel wird schon benutzt. Denk dir was Neues aus."
+  :notice_folder_details_were_saved: "Ordnerdetails wurden gespeichert"
+  :error_file_is_locked: "Datei ist gesperrt"
+  :notice_file_deleted: "Datei gelöscht"
+  :error_at_least_one_revision_must_be_present: "Es muss mindestens eine Version existieren"
+  :notice_revision_deleted: "Version gelöscht"
+  :warning_one_of_files_locked: "Eine der Dateien ist gesperrt"
+  :notice_file_unlocked: "Dateisperre gelöst"
+  :notice_file_revision_created: "Dateiversion erstellt"
+  :notice_your_preferences_were_saved: "Deine Einstellungen wurden gespeichert"
+  :warning_folder_notifications_already_activated: "Ordnerbenachrichtigungen schon aktiviert"
+  :notice_folder_notifications_activated: "Ordnerbenachrichtigungen aktiviert"
+  :warning_folder_notifications_already_deactivated: "Ordnerbenachrichtigungen schon deaktiviert"
+  :notice_folder_notifications_deactivated: "Ordnerbenachrichtigungen deaktiviert"
+  :warning_file_notifications_already_activated: "Dateibenachrichtigungen schon aktiviert"
+  :notice_file_notifications_activated: "Dateibenachrichtigungen aktiviert"
+  :warning_file_notifications_already_deactivated: "Dateibenachrichtigungen schon deaktiviert"
+  :notice_file_notifications_deactivated: "Dateibenachrichtigungen deaktiviert"
+  :link_details: "%{title} Details"
+  :link_edit: "Bearbeite %{title}"
+  :submit_create: "Erstellen"
+  :link_create_folder: "Erzeuge Ordner"
+  :title_check_uncheck_all_for_zip_download_or_email: "Wähle alle/keine für ZIP-Download bzw. Email"
+  :link_title: "Titel"
+  :link_size: "Größe"
+  :link_modified: "Geändert"
+  :link_ver: "Version"
+  :link_author: "Autor"
+  :title_check_for_zip_download_or_email: "Wähle für ZIP-Download bzw. Email"
+  :title_delete: "Löschen"
+  :title_notifications_active_deactivate: "Benachrichtigungen aktiv: Ausschalten"
+  :title_notifications_not_active_activate: "Benachrichtigungen nicht aktiv: Einschalten"
+  :title_title_version_version_download: "%{title} Version %{version} Download"
+  :title_locked_by_user: "Gesperrt von %{user}"
+  :title_locked_by_you: "Gesperrt von dir"
+  :title_waiting_for_approval: "Warte auf Zustimmung"
+  :title_approved: "Zugestimmt"
+  :title_unlock_file: "Hebe Sperre auf um Änderungen anderer Nutzer zu ermöglichen"
+  :title_lock_file: "Sperre um Änderungen anderer Nutzer zu verhindern"
   :submit_download: "Download"
-  :title_download_checked: "Download checked in Zip archive"
+  :title_download_checked: "Download der ausgewählten Dateien in einem ZIP-Archiv"
   :submit_email: "Email"
-  :title_send_checked_by_email: "Send checked by email"
-  :link_user_preferences: "Your DMSF project preferences"
-  :heading_send_documents_by_email: "Send documents by email"
-  :label_email_from: "From"
-  :label_email_to: "To"
+  :title_send_checked_by_email: "Sende gewählte Dateien per Email"
+  :link_user_preferences: "Deine Einstellungen"
+  :heading_send_documents_by_email: "Sende Dateien per Email"
+  :heading_new_folder : "Neuen Ordner erstellen"
+  :label_email_from: "Von"
+  :label_email_to: "An"
   :label_email_cc: "CC"
-  :label_email_subject: "Subject"
-  :label_email_documents: "Documents"
-  :label_email_body: "Body"
-  :label_email_send: "Send"
-  :title_notifications_active: "Notifications active"
-  :label_file_size: "File size"
+  :label_email_subject: "Betreff"
+  :label_email_documents: "Dateien"
+  :label_email_body: "Text"
+  :label_email_send: "Senden"
+  :label_description: "Beschreibung"
+  :label_title: "Titel"
+  :submit_save: "Speichern"
+  :title_notifications_active: "Benachrichtigungen aktiv"
+  :label_file_size: "Dateigröße"
   :heading_file_upload: "Upload"
-  :note_uploaded_maximum_files_at_once: "There can be uploaded maximum of %{number} files at once."
-  :note_upload_files_greater_than_two_gb: "To upload files greater than 2GB you must have 64b browser."
+  :note_uploaded_maximum_files_at_once: "Es können maximal %{number} Dateien auf einmal hochgeladen werden."
+  :note_upload_files_greater_than_two_gb: "Um Dateien größer 2GB hochzuladen brauchst du einen 64bit-Browser."
   :submit_upload_files: "Upload"
-  :info_file_locked: "File locked!"
-  :label_notifications: "Notifications"
-  :select_option_default: "Default"
-  :select_option_deactivated: "Deactivated"
-  :select_option_activated: "Activated"
-  :title_save_preferences: "Save preferences"
-  :heading_revisions: "Revisions"
+  :info_file_locked: "Datei gesperrt!"
+  :label_notifications: "Benachrichtigungen"
+  :select_option_default: "Voreinstellung"
+  :select_option_deactivated: "Aus"
+  :select_option_activated: "Ein"
+  :title_save_preferences: "Speichere Einstellungen"
+  :heading_revisions: "Versionen"
   :title_download: "Download"
-  :title_delete_revision: "Delete revision"
-  :label_created: "Created"
-  :label_changed: "Changed"
-  :info_changed_by_user: "%{changed} by %{user}"
-  :label_filename: "Filename"
+  :title_delete_revision: "Lösche Version"
+  :label_created: "Erstellt"
+  :label_changed: "Geändert"
+  :info_changed_by_user: "%{changed} von %{user}"
+  :label_filename: "Dateiname"
   :label_version: "Version"
   :label_workflow: "Workflow"
-  :option_workflow_waiting_for_approval: "Waiting for approval"
-  :option_workflow_approved: "Approved"
-  :option_workflow_none: "None"
+  :option_workflow_waiting_for_approval: "Warte auf Zustimmung"
+  :option_workflow_approved: "Zugestimmt"
+  :option_workflow_none: "Keiner"
   :label_mime: "Mime"
-  :label_size: "Size"
-  :label_comment: "Comment"
-  :heading_new_revision: "New Revision"
-  :option_version_same: "Same"
-  :option_version_minor: "Minor"
-  :option_version_major: "Major"
-  :label_new_content: "New content"
-  :label_maximum_files_upload: "Maximum files upload"
-  :note_maximum_number_of_files_uploaded: "Limits maximum number of files uploaded at once. 0 means unlimited."
-  :label_maximum_files_download: "Maximum files download"
-  :note_maximum_number_of_files_downloaded: "Limits maximum number of files downloaded in zip or sent via email. 0 means unlimited."
-  :label_file_storage_directory: "File storage directory"
-  :label_index_database: "Index database"
-  :label_stemming_language: "Stemming Language"
-  :note_possible_values: "Possible values"
-  :note_pass_none_to_disable_stemming: "pass 'none' to disable stemming"
-  :label_stem_strategy: "Stem strategy"
-  :option_stem_none: "Stem none (default)"
-  :option_stem_some: "Stem some"
-  :option_stem_all: "Stem all"
-  :label_stemming_description: "This controls how the query parser will apply the stemming algorithm. The default value is STEM_NONE. The possible values are"
-  :note_do_not_stem: "Don't perform any stemming."
+  :label_size: "Größe"
+  :label_comment: "Kommentar"
+  :heading_new_revision: "Neue Version"
+  :option_version_same: "gleiche Version"
+  :option_version_minor: "Unterversion"
+  :option_version_major: "Hauptversion"
+  :label_new_content: "Neuer Inhalt"
+  :label_maximum_files_upload: "Maximal hochzuladende Dateien"
+  :note_maximum_number_of_files_uploaded: "Beschränkt die Anzahl der maximal auf einmal hochladbaren Dateien. 0 bedeutet unbeschränkt."
+  :label_maximum_files_download: "Maximal herunterzuladende Dateien"
+  :note_maximum_number_of_files_downloaded: "Beschränkt die Anzahl der maximal auf einmal herunterladbaren Dateien (per ZIP oder Mail). 0 bedeutet unbeschränkt."
+  :label_file_storage_directory: "Verzeichnis für die Dateiablage"
+  :label_index_database: "Index Datenbank"
+  :label_stemming_language: "Sprache für die Normalformreduktion"
+  :note_possible_values: "Mögliche Werte"
+  :note_pass_none_to_disable_stemming: "übergebe 'none' um die Normalformreduktion zu unterdrücken"
+  :label_stem_strategy: "Normalformreduktionsform"
+  :option_stem_none: "reduziere nichts (Voreinstellung)"
+  :option_stem_some: "reduziere manches"
+  :option_stem_all: "reduziere alles"
+  :label_stemming_description: "Diese Einstellung beeinflusst wie der Parser den Normalformreduktionsalgorithmus anwendet. Voreingestellt ist STEM_NONE. Die möglichen Werte sind"
+  :note_do_not_stem: "Mache keine Normalformreduktion."
   :note_stem_some: "Search for stemmed forms of terms except for those which start with a capital letter, or are followed by certain characters, or are used with operators which need positional information. Stemmed terms are prefixed with 'Z'."
-  :note_stem_all: "Search for stemmed forms of all words (note: no 'Z' prefix is added)."
-  :note_stemming_applied: "Note that the stemming algorithm is only applied to words in probabilistic fields - boolean filter terms are never stemmed."
-  :label_default_notifications: "File default notifications"
-  :heading_uploaded_files: "Uploaded Files"
-  :submit_commit: "Commit"
-  :link_documents: "Documents"
-  :permission_browse_documents: "Browse documents"
-  :permission_user_preferences: "User preferences"
-  :permission_view_dmsf_files: "View documents"
+  :note_stem_all: "Suche nach reduzierten Formen aller Wörter (Achtung: Kein 'Z'-Präfix wird hinzugefügt)."
+  :note_stemming_applied: "Beachte, dass der Normalformreduzierungsalgorithmus nur bei Wörtern in Wahrscheinlichkeitsfeldern angewendert wird - boolesche Filterausdrücke werden nie reduziert."
+  :label_default_notifications: "standardmäßge Dateibenachrichtigungen"
+  :heading_uploaded_files: "Hochgeladene Dateien"
+  :submit_commit: "OK"
+  :link_documents: "Dateien"
+  :permission_browse_documents: "Durchforste Dateien"
+  :permission_user_preferences: "Benutzereinstellungen"
+  :permission_view_dmsf_files: "Betrachte Dateien"
   :permission_folder_manipulation: "Folder manipulation"
   :permission_file_manipulation: "File manipulation"
   :permission_file_approval: "File approval"
-  :permission_force_file_unlock: "Force file unlock"
-  :label_file: "File"
-  :field_folder: "Folder"
-  :error_create_cycle_in_folder_dependency: "create cycle in folder dependency"
-  :error_contains_invalid_character: "contains invalid character(s)"
+  :permission_force_file_unlock: "Erzwinge Aufhebung der Dateisperre"
+  :label_file: "Datei"
+  :field_folder: "Ordner"
+  :error_create_cycle_in_folder_dependency: "schaffen Zyklus in Abhängigkeit Ordner"
+  :error_contains_invalid_character: "enthält ungültige Zeichen"
+
+# Not translated
   :error_file_commit_require_uploaded_file: "File commit require uploaded file"
   :warning_some_files_were_not_commited: "Some files were not commited due to validation errors: %{files}"
   :error_user_has_not_right_delete_folder: "User hasn't right to delete forders"
