* special localization key for DMSF menu entry
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@141 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/de.yml
+++ b/redmine_dmsf/config/locales/de.yml
@@ -159,4 +159,5 @@ de:
   :error_file_can_not_be_created: "File can't be created in storage directory"
   :error_wrong_zip_encoding: "Wrong Zip encoding"
   :warning_xapian_not_available: "Xapian not available"
+  :menu_dmsf: "DMSF"
   
