--- a/redmine_dmsf/config/locales/cs.yml
+++ b/redmine_dmsf/config/locales/cs.yml
@@ -1,161 +1,162 @@
 cs:
   :dmsf: "DMSF"
   :label_dmsf_file_plural: "Dmsf soubory"
-  :warning_no_entries_selected: "No entries selected"
-  :error_email_to_must_be_entered: "Email To must be entered"
-  :notice_email_sent: "Email sent"
-  :warning_file_already_locked: "File already locked"
-  :notice_file_locked: "File locked"
-  :warning_file_not_locked: "File not locked"
-  :notice_file_unlocked: "File unlocked"
-  :error_only_user_that_locked_file_can_unlock_it: "Only user that locked file can unlock it"
-  :question_do_you_really_want_to_delete_this_entry: "Do you really want to delete this entry?"
-  :error_max_files_exceeded: "Limit for %{number} simultaneously downloaded files exceeded"
-  :question_do_you_really_want_to_delete_this_revision: "Do you really want to delete this revision?"
-  :error_entry_project_does_not_match_current_project: "Entry project doesn't match current project"
-  :notice_folder_created: "Folder created"
-  :error_folder_creation_failed: "Folder creation failed"
-  :error_folder_title_must_be_entered: "Title must be entered"
-  :notice_folder_deleted: "Folder deleted"
-  :error_folder_is_not_empty: "Folder is not empty"
-  :error_folder_title_is_already_used: "Title is already used"
-  :notice_folder_details_were_saved: "Folder details were saved"
-  :error_file_is_locked: "File is locked"
-  :notice_file_deleted: "File deleted"
-  :error_at_least_one_revision_must_be_present: "At least one revision must be present"
-  :notice_revision_deleted: "Revision deleted" 
-  :warning_one_of_files_locked: "One of files locked"
-  :notice_file_unlocked: "File unlocked"
-  :notice_file_revision_created: "File revision created"
-  :notice_your_preferences_were_saved: "Your preferences were saved"
-  :warning_folder_notifications_already_activated: "Folder notifications already activated"
-  :notice_folder_notifications_activated: "Folder notifications activated"
-  :warning_folder_notifications_already_deactivated: "Folder notifications already deactivated"
-  :notice_folder_notifications_deactivated: "Folder notifications deactivated"
-  :warning_file_notifications_already_activated: "File notifications already activated"
-  :notice_file_notifications_activated: "File notifications activated"
-  :warning_file_notifications_already_deactivated: "File notifications already deactivated"
-  :notice_file_notifications_deactivated: "File notifications deactivated"
-  :link_details: "%{title} details"
-  :link_edit: "Edit %{title}"
-  :submit_create: "Create"
-  :link_create_folder: "Create folder"
-  :title_check_uncheck_all_for_zip_download_or_email: "Check/Uncheck all for zip download or email"
-  :link_title: "Title"
-  :link_size: "Size"
-  :link_modified: "Modified"
+  :warning_no_entries_selected: "Není nic vybráno"
+  :error_email_to_must_be_entered: "Musí být zadán adresát"
+
+  :notice_email_sent: "Email byl odeslán"
+  :warning_file_already_locked: "Soubor už je zamčen"
+  :notice_file_locked: "Soubor byl zamčen"
+  :warning_file_not_locked: "Soubor není zamčen"
+  :notice_file_unlocked: "Soubor byl odemčen"
+  :error_only_user_that_locked_file_can_unlock_it: "Soubor může být odemčen pouze uživatelem, který ho zamkl"
+  :question_do_you_really_want_to_delete_this_entry: "Chcete to skutečně smazat?"
+  :error_max_files_exceeded: "Limit pro %{number} najednou stažených souborů je překročen"
+  :question_do_you_really_want_to_delete_this_revision: "Chcete skutečně smazat tuto revizi?"
+  :error_entry_project_does_not_match_current_project: "Zadaný projekt neodpovídá aktuálnímu projektu"
+  :notice_folder_created: "Adresář byl vytvořen"
+  :error_folder_creation_failed: "Vytváření složky selhalo"
+  :error_folder_title_must_be_entered: "Musí být zadán název"
+  :notice_folder_deleted: "Adresář byl smazán"
+  :error_folder_is_not_empty: "Adresář není prázdný"
+  :error_folder_title_is_already_used: "Název již existuje"
+  :notice_folder_details_were_saved: "Detaily složky byly uloženy"
+  :error_file_is_locked: "Soubor je zamčen"
+  :notice_file_deleted: "Soubor byl smazán"
+  :error_at_least_one_revision_must_be_present: "Musí ezistovat alespoň jedna revize"
+  :notice_revision_deleted: "Revize byla smazána" 
+  :warning_one_of_files_locked: "Jeden ze souborů je zamčen"
+  :notice_file_unlocked: "Soubor bykl odemčen"
+  :notice_file_revision_created: " vytvořena nová revize"
+  :notice_your_preferences_were_saved: "Vaše nastavení bylo uloženo"
+  :warning_folder_notifications_already_activated: "Notifikace složky již byly aktivovány"
+  :notice_folder_notifications_activated: "Notifikace složky byly aktivovány"
+  :warning_folder_notifications_already_deactivated: "Notifikace složky již byly deaktivovány"
+  :notice_folder_notifications_deactivated: "Notifikace složky byly deaktivovány"
+  :warning_file_notifications_already_activated: "Notifikace souboru již byly aktivovány"
+  :notice_file_notifications_activated: "Notifikace souboru byly aktivovány"
+  :warning_file_notifications_already_deactivated: "Notifikace souboru již byly deaktivovány"
+  :notice_file_notifications_deactivated: "Notifikace souboru byly deaktivovány"
+  :link_details: "%{title} detaily"
+  :link_edit: "Upravit %{title}"
+  :submit_create: "Vytvořit"
+  :link_create_folder: "Vytvořit složku"
+  :title_check_uncheck_all_for_zip_download_or_email: "Vybrat/Nevybrat vše pro stažení jako Zip nebo emailem"
+  :link_title: "Název"
+  :link_size: "Velikost"
+  :link_modified: "Změněno"
   :link_ver: "Ver."
-  :link_author: "Author"
-  :title_check_for_zip_download_or_email: "Check for Zip download or email"
-  :title_delete: "Delete"
-  :title_notifications_active_deactivate: "Notifications active: Deactivate"
-  :title_notifications_not_active_activate: "Notifications not active: Activate"
-  :title_title_version_version_download: "%{title} version %{version} download"
-  :title_locked_by_user: "Locked by %{user}"
-  :title_locked_by_you: "Locked by you"
-  :title_waiting_for_approval: "Waiting for Approval"
-  :title_approved: "Approved"
-  :title_unlock_file: "Unlock to allow changes for other members"
-  :title_lock_file: "Lock to prevent changes for other members"
-  :submit_download: "Download"
-  :title_download_checked: "Download checked in Zip archive"
+  :link_author: "Autor"
+  :title_check_for_zip_download_or_email: "Vybrat pro stažení jako Zip nebo emailem"
+  :title_delete: "Smazat"
+  :title_notifications_active_deactivate: "Notifikace aktivní: Deaktivovat"
+  :title_notifications_not_active_activate: "Notifikace nejsou aktivní: Aktivovat"
+  :title_title_version_version_download: "%{title} verze %{version} stáhnout"
+  :title_locked_by_user: "Zamčeno uživatelem %{user}"
+  :title_locked_by_you: "Zamčeno Vámi"
+  :title_waiting_for_approval: "Čeká na schválení"
+  :title_approved: "Schváleno"
+  :title_unlock_file: "Odemknout a uožnit změny ostatním uživatelům"
+  :title_lock_file: "Zamknout a zabránit změnám ostatních uživatelů"
+  :submit_download: "Stáhnout"
+  :title_download_checked: "Stáhnout vybrané jako Zip"
   :submit_email: "Email"
-  :title_send_checked_by_email: "Send checked by email"
-  :link_user_preferences: "Your DMSF project preferences"
-  :heading_send_documents_by_email: "Send documents by email"
-  :label_email_from: "From"
-  :label_email_to: "To"
-  :label_email_cc: "CC"
-  :label_email_subject: "Subject"
-  :label_email_documents: "Documents"
-  :label_email_body: "Body"
-  :label_email_send: "Send"
-  :title_notifications_active: "Notifications active"
-  :label_file_size: "File size"
-  :heading_file_upload: "Upload"
-  :note_uploaded_maximum_files_at_once: "There can be uploaded maximum of %{number} files at once."
-  :note_upload_files_greater_than_two_gb: "To upload files greater than 2GB you must have 64b browser."
-  :submit_upload_files: "Upload"
-  :heading_new_folder: "New Folder"
-  :label_title: "Title"
-  :label_description: "Description"
-  :submit_save: "Save"
-  :info_file_locked: "File locked!"
-  :label_notifications: "Notifications"
-  :select_option_default: "Default"
-  :select_option_deactivated: "Deactivated"
-  :select_option_activated: "Activated"
-  :title_save_preferences: "Save preferences"
-  :heading_revisions: "Revisions"
-  :title_download: "Download"
-  :title_delete_revision: "Delete revision"
-  :label_created: "Created"
-  :label_changed: "Changed"
-  :info_changed_by_user: "%{changed} by %{user}"
-  :label_filename: "Filename"
-  :label_version: "Version"
+  :title_send_checked_by_email: "Zadeslat vybrané emailem"
+  :link_user_preferences: "Vaše nastavení"
+  :heading_send_documents_by_email: "Odeslat dokumenty emailem"
+  :label_email_from: "Od"
+  :label_email_to: "Komu"
+  :label_email_cc: "Kopie"
+  :label_email_subject: "Předmět"
+  :label_email_documents: "Documenty"
+  :label_email_body: "Obsah"
+  :label_email_send: "Odesláno"
+  :title_notifications_active: "Notifikace jsou aktivní"
+  :label_file_size: "Velikost souboru"
+  :heading_file_upload: "Nahrát"
+  :note_uploaded_maximum_files_at_once: "Maximálně může být nahráno %{number} souborů najednou."
+  :note_upload_files_greater_than_two_gb: "Nahrání souborů větších než 2GB vyžaduje 64b prohlížeč."
+  :submit_upload_files: "Nahrání"
+  :heading_new_folder: "Nová složka"
+  :label_title: "Název"
+  :label_description: "Popis"
+  :submit_save: "Uložit"
+  :info_file_locked: "Soubor je zamčen!"
+  :label_notifications: "Notifikace"
+  :select_option_default: "Výchozí"
+  :select_option_deactivated: "Deaktivováno"
+  :select_option_activated: "Aktivováno"
+  :title_save_preferences: "Uložit nastavení"
+  :heading_revisions: "Revize"
+  :title_download: "Stáhnout"
+  :title_delete_revision: "Smazat revizi"
+  :label_created: "Vytvořeno"
+  :label_changed: "Změněno"
+  :info_changed_by_user: "%{changed} uživatelem %{user}"
+  :label_filename: "Jméno souboru"
+  :label_version: "Verze"
   :label_workflow: "Workflow"
-  :option_workflow_waiting_for_approval: "Waiting for approval"
-  :option_workflow_approved: "Approved"
-  :option_workflow_none: "None"
-  :label_mime: "Mime"
-  :label_size: "Size"
-  :label_comment: "Comment"
-  :heading_new_revision: "New Revision"
-  :option_version_same: "Same"
-  :option_version_minor: "Minor"
-  :option_version_major: "Major"
-  :label_new_content: "New content"
-  :label_maximum_files_upload: "Maximum files upload"
-  :note_maximum_number_of_files_uploaded: "Limits maximum number of files uploaded at once. 0 means unlimited."
-  :label_maximum_files_download: "Maximum files download"
-  :note_maximum_number_of_files_downloaded: "Limits maximum number of files downloaded in zip or sent via email. 0 means unlimited."
-  :label_file_storage_directory: "File storage directory"
-  :label_index_database: "Index database"
-  :label_stemming_language: "Stemming Language"
-  :note_possible_values: "Possible values"
-  :note_pass_none_to_disable_stemming: "pass 'none' to disable stemming"
-  :label_stem_strategy: "Stem strategy"
-  :option_stem_none: "Stem none (default)"
-  :option_stem_some: "Stem some"
-  :option_stem_all: "Stem all"
-  :label_stemming_description: "This controls how the query parser will apply the stemming algorithm. The default value is STEM_NONE. The possible values are"
-  :note_do_not_stem: "Don't perform any stemming."
-  :note_stem_some: "Search for stemmed forms of terms except for those which start with a capital letter, or are followed by certain characters, or are used with operators which need positional information. Stemmed terms are prefixed with 'Z'."
-  :note_stem_all: "Search for stemmed forms of all words (note: no 'Z' prefix is added)."
-  :note_stemming_applied: "Note that the stemming algorithm is only applied to words in probabilistic fields - boolean filter terms are never stemmed."
-  :label_default_notifications: "File default notifications"
-  :heading_uploaded_files: "Uploaded Files"
-  :submit_commit: "Commit"
-  :link_documents: "Documents"
-  :permission_browse_documents: "Browse documents"
-  :permission_user_preferences: "User preferences"
-  :permission_view_dmsf_files: "View documents"
-  :permission_folder_manipulation: "Folder manipulation"
-  :permission_file_manipulation: "File manipulation"
-  :permission_file_approval: "File approval"
-  :permission_force_file_unlock: "Force file unlock"
-  :label_file: "File"
-  :field_folder: "Folder"
-  :error_create_cycle_in_folder_dependency: "create cycle in folder dependency"
-  :error_contains_invalid_character: "contains invalid character(s)"
-  :error_file_commit_require_uploaded_file: "File commit require uploaded file"
-  :warning_some_files_were_not_commited: "Some files were not commited due to validation errors: %{files}"
-  :error_user_has_not_right_delete_folder: "User hasn't right to delete forders"
-  :error_user_has_not_right_delete_file: "User hasn't right to delete file"
-  :notice_entries_deleted: "Entries deleted"
-  :warning_some_entries_were_not_deleted: "Some entries weren't deleted: %{entries}"
-  :question_do_you_really_want_to_delete_entries: "Do you really want to delete checked entries?"
-  :title_delete_checked: "Delete checked"
-  :title_number_of_files_in_directory: "Number of files in directory"
-  :title_filename_for_download: "Filename used for download or in Zip archive"
-  :label_number_of_folders: "Folders"
-  :label_number_of_documents: "Documents"
-  :label_zip_names_encoding: "Zip names encoding"
-  :note_zip_names_encoding_iconv: "Iconv is used for charset conversion from utf-8 to target encoding"
-  :error_file_storage_directory_does_not_exist: "File storage directory doesn't exist and can't be created"
-  :error_file_can_not_be_created: "File can't be created in storage directory"
-  :error_wrong_zip_encoding: "Wrong Zip encoding"
-  :warning_xapian_not_available: "Xapian not available"
+  :option_workflow_waiting_for_approval: "Čeká na schválení"
+  :option_workflow_approved: "Schváleno"
+  :option_workflow_none: "Žádné"
+  :label_mime: "Typ"
+  :label_size: "Velikost"
+  :label_comment: "Komentář"
+  :heading_new_revision: "Nová revize"
+  :option_version_same: "Stejná"
+  :option_version_minor: "Podružná"
+  :option_version_major: "Hlavní"
+  :label_new_content: "Nový obsah"
+  :label_maximum_files_upload: "Maximální počet najednou nahraných souborů"
+  :note_maximum_number_of_files_uploaded: "Maximální počet najednou nahraných souborů. 0 znamená bez omezení."
+  :label_maximum_files_download: "Maximální počet najednou stažených souborů"
+  :note_maximum_number_of_files_downloaded: "Maximální počet najednou stažených souborů jako Zip nebo odeslaných emailem. 0 znamená bez omezení."
+  :label_file_storage_directory: "Složka pro uložení souborů"
+  :label_index_database: "Index databáze"
+  :label_stemming_language: "Jazyk pro 'Stemming'"
+  :note_possible_values: "Povolené hodnoty"
+  :note_pass_none_to_disable_stemming: "zadej 'nic' pro vypnutí 'Stemming'"
+  :label_stem_strategy: "'Stem' strategie"
+  :option_stem_none: "Stem nic (výchozí)"
+  :option_stem_some: "Stem něco"
+  :option_stem_all: "Stem vše"
+  :label_stemming_description: "Tímto je určeno, jak analyzátor dotazu aplikuje algoritmus Stemmingu. Výchozí hodnota je STEM_NONE. Dostupné hodnoty jsou"
+  :note_do_not_stem: "Žádný stemming."
+  :note_stem_some: "Hledej stemmed formy výrazů kromě těch, které začínají velkým písmenem nebo jsou následovány určitými znaky nebo jsou použity s operátory, které vyžadují informaci o pozici. Stemmed výrazy začínají písmenem 'Z'."
+  :note_stem_all: "Hledej stemmed formy všech slov (poznámka: 'Z' prefix není přidán)."
+  :note_stemming_applied: "Poznámka, že algoritmus stemingu je aplikován pouze na slova v pravděpodobnostních polích - výrazy pravda/nepravda nejsou stemovány."
+  :label_default_notifications: "Výchozí notifikace souboru"
+  :heading_uploaded_files: "Nahrané soubory"
+  :submit_commit: "Potvrdit"
+  :link_documents: "Dokumenty"
+  :permission_browse_documents: "Projcházet dokumenty"
+  :permission_user_preferences: "Nastavení uživatele"
+  :permission_view_dmsf_files: "Zobrazit dokumnety"
+  :permission_folder_manipulation: "Přesun složky"
+  :permission_file_manipulation: "Přesun souboru"
+  :permission_file_approval: "Schválení souboru"
+  :permission_force_file_unlock: "Vynucené odemknutí souboru"
+  :label_file: "Soubor"
+  :field_folder: "Složka"
+  :error_create_cycle_in_folder_dependency: "vytvořit smyčku v závislostech složky"
+  :error_contains_invalid_character: "obsahuje neplatné znaky"
+  :error_file_commit_require_uploaded_file: "Potvrzení vyžaduje nahraný soubor"
+  :warning_some_files_were_not_commited: "Některé soubory nebyly potvrzené z důvodu chyb při validaci: %{files}"
+  :error_user_has_not_right_delete_folder: "Uživatel nemá právo mazat složky"
+  :error_user_has_not_right_delete_file: "Uživatel nemá právo mazat soubor"
+  :notice_entries_deleted: "Poožky smazány"
+  :warning_some_entries_were_not_deleted: "Některé položky nebyly smazány: %{entries}"
+  :question_do_you_really_want_to_delete_entries: "Opravdu chcete smazat vybrané položky?"
+  :title_delete_checked: "Smaž vybrané"
+  :title_number_of_files_in_directory: "Počet souborů ve složce"
+  :title_filename_for_download: "Název Zip archívu ke stažení"
+  :label_number_of_folders: "Složky"
+  :label_number_of_documents: "Dokumenty"
+  :label_zip_names_encoding: "Kódováni názvu Zipu"
+  :note_zip_names_encoding_iconv: "Pro kódováni znaků z UTF8 do cílového kování je použi Iconv"
+  :error_file_storage_directory_does_not_exist: "Cílová složka neexistuje a nemůže být vytvořena"
+  :error_file_can_not_be_created: "Nelze vytvořit soubor v cílové složce"
+  :error_wrong_zip_encoding: "Chybné kódování Zipu"
+  :warning_xapian_not_available: "Xapian není k dostupný"
   :menu_dmsf: "DMSF"
   
