* finished Issue 54: Choose if deleted Documents remains in storage
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@151 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/en.yml
+++ b/redmine_dmsf/config/locales/en.yml
@@ -158,4 +158,5 @@ en:
   :error_wrong_zip_encoding: "Wrong Zip encoding"
   :warning_xapian_not_available: "Xapian not available"
   :menu_dmsf: "DMSF"
+  :label_physical_file_delete: "Physical file delete"
   
