--- a/redmine_dmsf/config/locales/en-GB.yml
+++ b/redmine_dmsf/config/locales/en-GB.yml
@@ -154,4 +154,5 @@ en-GB:
   :error_wrong_zip_encoding: "Wrong Zip encoding"
   :warning_xapian_not_available: "Xapian not available"
   :menu_dmsf: "DMSF"
+  :label_physical_file_delete: "Physical file delete"
   
