--- a/redmine_dmsf/config/locales/es.yml
+++ b/redmine_dmsf/config/locales/es.yml
@@ -156,4 +156,5 @@ es:
   :error_wrong_zip_encoding: "Wrong Zip encoding"
   :warning_xapian_not_available: "Xapian not available"
   :menu_dmsf: "DMSF"
+  :label_physical_file_delete: "Physical file delete"
   
