--- a/redmine_dmsf/config/locales/cs.yml
+++ b/redmine_dmsf/config/locales/cs.yml
@@ -162,3 +162,5 @@ cs:
 
 # Not translated
   :label_physical_file_delete: "Physical file delete"  
+  :user_is_not_project_member: "You are not member of the project"
+  
