--- a/redmine_dmsf/config/locales/en-GB.yml
+++ b/redmine_dmsf/config/locales/en-GB.yml
@@ -155,4 +155,5 @@ en-GB:
   :warning_xapian_not_available: "Xapian not available"
   :menu_dmsf: "DMSF"
   :label_physical_file_delete: "Physical file delete"
+  :user_is_not_project_member: "You are not member of the project"
   
