--- a/redmine_dmsf/config/locales/ja.yml
+++ b/redmine_dmsf/config/locales/ja.yml
@@ -159,4 +159,5 @@ en:
   :warning_xapian_not_available: "Xapian not available"
   :menu_dmsf: "DMSF"
   :label_physical_file_delete: "Physical file delete"
+  :user_is_not_project_member: "You are not member of the project"
   
