* work on Issue 26: Auditing access to file revisions
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@160 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/config/locales/es.yml
+++ b/redmine_dmsf/config/locales/es.yml
@@ -158,4 +158,7 @@ es:
   :menu_dmsf: "DMSF"
   :label_physical_file_delete: "Physical file delete"
   :user_is_not_project_member: "You are not member of the project"
+  :heading_access_downloads_emails: "Downloads/Emails"
+  :heading_access_first: "First"
+  :heading_access_last: "Last"
   
