--- a/redmine_dmsf/config/locales/cs.yml
+++ b/redmine_dmsf/config/locales/cs.yml
@@ -159,11 +159,9 @@ cs:
   :error_wrong_zip_encoding: "Chybné kódování Zipu"
   :warning_xapian_not_available: "Xapian není k dostupný"
   :menu_dmsf: "DMSF"
-
-# Not translated
-  :label_physical_file_delete: "Physical file delete"  
-  :user_is_not_project_member: "You are not member of the project"
-  :heading_access_downloads_emails: "Downloads/Emails"
-  :heading_access_first: "First"
-  :heading_access_last: "Last"
+  :label_physical_file_delete: "Fyzické smazání souboru"  
+  :user_is_not_project_member: "Nejste členem projektu"
+  :heading_access_downloads_emails: "Stažené/Emaily"
+  :heading_access_first: "První"
+  :heading_access_last: "Poslední"
   
