--- a/redmine_dmsf/config/locales/ja.yml
+++ b/redmine_dmsf/config/locales/ja.yml
@@ -163,4 +163,5 @@ en:
   :heading_access_downloads_emails: "Downloads/Emails"
   :heading_access_first: "First"
   :heading_access_last: "Last"
+  :label_dmsf_updated: "DMSF updated"
   
