--- a/redmine_dmsf/config/locales/es.yml
+++ b/redmine_dmsf/config/locales/es.yml
@@ -161,4 +161,5 @@ es:
   :heading_access_downloads_emails: "Downloads/Emails"
   :heading_access_first: "First"
   :heading_access_last: "Last"
+  :label_dmsf_updated: "DMSF updated"
   
