--- a/redmine_dmsf/config/locales/ru.yml
+++ b/redmine_dmsf/config/locales/ru.yml
@@ -159,4 +159,5 @@ ru:
   :heading_access_downloads_emails: "Downloads/Emails"
   :heading_access_first: "First"
   :heading_access_last: "Last"
+  :label_dmsf_updated: "DMSF updated"
   
